# serial_python

serial_with_cobs/: esp_connect.py  pyproject.toml
