[tool.poetry]
name = "embedded"
version = "0.1.0"
description = ""
authors = ["KIrie-0217 <kook.cuckoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
blessed = "^1.19.1"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
